public/css/styles.css
/* ... */
#flowAnimation {
    /* border: 7px solid black; */
    position: absolute;
    justify-content: center;
    align-items: center;
    position: absolute;
    height: 600px;
    width: 100%;
    top: 300px;
    overflow: hidden;

     /* For some unknown reason, making base opacity
        0 causes lag when triggering opacity
        transition animation */
    opacity: 0.001;
    animation-fill-mode: forwards;
}

#sineWaveBack {
    height: 45%;
    position: absolute;
    margin-top: 30px;
    top: 200px;
    z-index: 0;
    opacity: 0.10;
    margin-left: 0px;
    margin-top: -35px;
    animation: slideBack 30s linear infinite, alteropacityback 30s linear infinite;
}

#sineWaveFront {
    height: 60%;
    position: absolute;
    top: 150px;
    z-index: 0;
    opacity: 0.25;
    margin-left: 0px;
    margin-top: -35px;
    animation: slideFront 12s linear infinite;
}

@keyframes slideBack {
    0% {
        transform: translateX(0);
    }
    100% {
        transform: translateX(-380px);
    }
}

@keyframes slideFront {
    0% {
        transform: translateX(0);
    }
    100% {
        transform: translateX(-503px);
    }
}

@keyframes intoOpacityTransition {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

@keyframes outOfOpacityTransition {
    from {
        opacity: 1;
    }
    to {
        opacity: 0;
    }
}

.intoOpacityTransition {
    animation: intoOpacityTransition 6s;
}

.outOfOpacityTransition {
    animation: outOfOpacityTransition 0.5s;
}

#chillAnimation {
    /* border: 7px solid black; */
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    height: 1200px;
    width: 100%;
    /* top: 300px; */
    overflow: hidden;

    /* For some unknown reason, making base opacity
        0 causes lag when triggering opacity
        transition animation */
    opacity: 0.001;
    animation-fill-mode: forwards;
}

#circleOuter {
    height: 1000px;
    width: 1000px;
    position: absolute;
    /* opacity: 0.05; */
    animation: circleOuterAnimation 6s linear infinite;
}

#circleMiddle {
    height: 800px;
    width: 800px;
    position: absolute;
    /* opacity: 0.05; */
    animation: circleMiddleAnimation 6s linear infinite;
}

#circleInner {
    height: 600px;
    width: 600px;
    position: absolute;
    /* opacity: 0.05; */
    animation: circleInnerAnimation 6s linear infinite;
}

@keyframes circleOuterAnimation {
    0% {
        opacity: 0.075;
        transform: scaleX(1.005) scaleY(1.005);
    }
    10% {
        transform: scaleX(1) scaleY(1);
        opacity: 0;
    }
    30% {
        opacity: 0.05;
    }
    50% {
        opacity: 0.05;
    }
    70% {
        opacity: 0.05;
        transform: scaleX(1) scaleY(1);
    }
    90% {
        opacity: 0.15;
        transform: scaleX(1.01) scaleY(1.01);
    }
    100% {
        opacity: 0.075;
        transform: scaleX(1.005) scaleY(1.005);
    }
}

@keyframes circleMiddleAnimation {
    0% {
        opacity: 0.05;
    }
    5% {
        opacity: 0.05;
    }
    30% {
        opacity: 0.05;
    }
    50% {
        opacity: 0.05;
        transform: scaleX(1) scaleY(1);
    }
    70% {
        opacity: 0.15;
        transform: scaleX(1.03) scaleY(1.03);
    }
    90% {
        opacity: 0;
        transform: scaleX(1) scaleY(1);
    }
    100% {
        opacity: 0.05;
    }
}

@keyframes circleInnerAnimation {
    0% {
        opacity: 0.05;
    }
    5% {
        opacity: 0.05;
    }
    30% {
        opacity: 0.05;
        transform: scaleX(1) scaleY(1);
    }
    50% {
        opacity: 0.15;
        transform: scaleX(1.05) scaleY(1.05);
    }
    70% {
        opacity: 0;
        transform: scaleX(1) scaleY(1);
    }
    90% {
        opacity: 0.05;
    }
    100% {
        opacity: 0.05
    }
}

@keyframes alteropacityback {
    0% {
        opacity: 0.15;
    }
    20% {
        opacity: 0.05;
    }
    40% {
        opacity: 0.25;
    }
    60% {
        opacity: 0.10;
    }
    80% {
        opacity: 0.05;
    }
}

@keyframes alteropacityfront {
    0% {
        opacity: 0.05;
    }
    20% {
        opacity: 0.25;
    }
    45% {
        opacity: 0.05;
    }
    80% {
        opacity: 0.25;
    }
    100% {
        opacity: 0.05;
    }
}


.container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: 20px;
}

main {
    display: block;
}

#main-container {
    /* Fixed dimensions */
    position: relative;
    width: 100%;
    max-width: 600px;
    
    /* Centering it horizontally */
    margin-left: auto;
    margin-right: auto;

    align-items: center;
    flex-direction: column; 
    
    box-sizing: border-box;

    padding: 10px;
    /* border: 1px solid rgb(0, 255, 200); */
}

@media (max-width: 504px) {
    #target-hours-interruptions-container {
        flex-direction: column;
        align-items: center;
        /* border: 1px solid yellow; */
        height: 325px;
    }
    #target-hours-container {
        margin-right: 0px;
    }
    #chillAnimation {
        margin-top: 150px;
    }
    #flowAnimation {
        margin-top: 170px;
    }
}

.header-btns {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    position: relative;
    /* border: 2px solid black; */
}

#reportBtn {
    display: flex;         /* Convert the button into a flex container */
    justify-content: space-around;
    align-items: center;   /* Vertically center the contents */
    margin-right: 10px;
    width: 125px;
}


#reportIcon {
    width: 30px;
    height: 30px;
    display: none;
}

#menuBtn {
    display: flex;         /* Convert the button into a flex container */
    justify-content: space-around;
    align-items: center;   /* Vertically center the contents */
    width: 100px;
}

#menuIcon {
    width: 30px;
    height: 30px;
    display: none;
}

#reportIcon-black {
    width: 30px;
    height: 30px;
    display: none;
}
/* ... */

